--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 .button {
   background-color: white;
   border: 2px solid black;
-  padding: 15px 32px;
+  padding: 100px 200px;
   text-align: center;
   text-decoration: none
   font-size: 16px;
@@ -24,10 +24,10 @@ html, body {
 .button:hover {
   background-color: #bab0af;
 }
-.button a {
+.button {
   text-align: center;
-  font-size: 16px;
-  color: black;
+  font-size: 40px;
+  color: red;
   text-decoration: none;
   margin: auto;
 }
